UC1 Employee Payroll App with Logo

--- a/payroll_form.html
+++ b/payroll_form.html
@@ -9,6 +9,16 @@
     <script defer src="../jss/payroll_form.js"></script>
 </head>
 <body>
+    <!-- UC 1 -->
+    <header class="header-content header" >
+        <div class="logo-content">
+         <img src="../assets/images/logo.jpg" alt="">
+         <div>
+             <span class="emp-text">EMPLOYEE</span><br>
+             <span class="emp-text emp-payroll">PAYROLL</span>
+         </div>   
+        </div>
+    </header>
     
 </body>
 </html>
