UC1 Employee Payroll App with logo

--- a/payroll_form.html
+++ b/payroll_form.html
@@ -9,7 +9,7 @@
     <script defer src="../jss/payroll_form.js"></script>
 </head>
 <body>
-    <!-- UC 1 -->
+    <!-- UC 1 Defining Header and logo-->
     <header class="header-content header" >
         <div class="logo-content">
          <img src="../assets/images/logo.jpg" alt="">
@@ -19,6 +19,5 @@
          </div>   
         </div>
     </header>
-    
 </body>
 </html>
