UC1 Defining Header and logo

--- a/payroll_form.html
+++ b/payroll_form.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/payroll_form.css">
     <title>Employee payroll form</title>
     <script defer src="../jss/payroll_form.js"></script>
 </head>
 <body>
-    <!-- UC 1 Defining Header and logo-->
-    <header class="header-content header" >
+    <!-- UC 1 Defining Header and logo -->
+    <header class="header-content header" 
         <div class="logo-content">
          <img src="../assets/images/logo.jpg" alt="">
          <div>
